--- a/src/main/webapp/static/less/module/clean-blog.less
+++ b/src/main/webapp/static/less/module/clean-blog.less
@@ -13,6 +13,15 @@ body {
 
 // -- Typography
 
+.images-gallery {
+  padding: 30px 0;
+
+  img {
+    width: 100%;
+    height: auto;
+  }
+}
+
 p {
   line-height: 1.5;
   margin: 15px 0;
@@ -29,6 +38,7 @@ h5,
 h6 {
   .sans-serif;
   font-weight: 800;
+
 }
 
 * {
@@ -174,10 +184,19 @@ header.jumbotron {
   .site-heading,
   .post-heading,
   .page-heading {
+
     padding: 100px 0 50px;
     color: white;
     @media only screen and (min-width: 768px) {
       padding: 150px 0;
+    }
+    a {
+      color: inherit;
+      &:hover,
+      &:focus {
+        color: inherit;
+        text-decoration: none;
+      }
     }
   }
   .site-heading,
@@ -197,7 +216,7 @@ header.jumbotron {
     }
     @media only screen and (min-width: 768px) {
       h1 {
-        font-size: 80px;
+        font-size: 60px;
       }
     }
   }
