--- a/src/main/webapp/static/less/module/clean-blog.less
+++ b/src/main/webapp/static/less/module/clean-blog.less
@@ -22,6 +22,9 @@ p {
   }
 }
 
+.home-page {
+  background-color: @theme-light;
+}
 h1,
 h2,
 h3,
@@ -100,6 +103,12 @@ hr.small {
 
     .nav {
       li {
+        button{
+          margin:20px;
+          color: black;
+          background: none;
+          border: none;
+        }
         a {
           color: white;
           padding: 20px;
